working on javascript functionality

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!--nav-->
   <header class="nav posRel headerSize row">
     <div class="container">
-      <a href="index.html" class="btn btn-primary btn-lg">David Cox</a>
+      <a href="#" onclick="demo()" class="btn btn-primary btn-lg">David Cox</a>
       <nav>
         <!-- set resting color to #4aaaa5-->
         <ul class="nav nav-tabs navbar-right posAbs">
@@ -30,11 +30,11 @@
 <div>
   <nav>
   <ul class="btn-group-vertical" role="group">
-    <li><a href="#" onclick="index()">About</a></li>
+    <li><button type="button" onclick="index()" class="btn btn-primary btn-block mainBtnFormat">About</button></li>
 
-    <li><a href="#" onclick="portfolio()">Portfolio</a></li>
+    <li><button type="button" onclick="portfolio()" class="btn btn-primary btn-block mainBtnFormat">Portfolio</button></li>
 
-    <li><a href="#" onclick="contact()"><button type="button" onclick="contact()" class="btn btn-primary btn-block mainBtnFormat">Contact</button></a></li>
+    <li><button type="button" onclick="contact()" class="btn btn-primary btn-block mainBtnFormat">Contact</button></li>
   </ul>
 </nav>
 </div>
@@ -61,9 +61,9 @@
         </div>
         <div class="row clearfix">
           <div id="mainImage">
-            <img src="assets/images/portrait.jpg" class="auth-image img-circle autoFill" alt="Your Name">
+            <img src="assets/images/portrait.jpg" id="test" class="auth-image img-circle autoFill" alt="Your Name">
           </div>
-          <p>
+          <p id="test2">
             Marshmallow jelly souffl&eacute; pastry biscuit gummi bears tootsie roll tootsie roll gingerbread. Cotton candy muffin gingerbread fruitcake. Sweet roll souffl&eacute; topping wafer croissant oat cake gummi&nbsp;bears.
           </p>
 
