--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </nav>
       </section>
       <!--index-->
-      <section class="col-lg-8 index" id="indexFormat">
+      <section class="col-lg-7 index" id="indexFormat">
         <div class="row">
           <h1>About Me | David Cox</h1>
         </div>
@@ -65,7 +65,7 @@
         </div>
       </section>
       <!--contact-->
-      <section class="col-lg-8 contact" id="contactFormat">
+      <section class="col-lg-7 contact" id="contactFormat">
         <div class="row">
           <h1>Contact</h1>
         </div>
@@ -91,7 +91,7 @@
       </section>
 
       <!--portfolio-->
-      <section class="col-lg-8 portfolio" id="portfolioFormat">
+      <section class="col-lg-7 portfolio" id="portfolioFormat">
         <div class="row">
           <h1>Portfolio</h1>
         </div>
@@ -124,89 +124,38 @@
         </div>
 
       </section>
-      <section class="sidebar col-lg-2">
+      <section class="sidebar col-lg-3" id="mainLeft">
         <div class="row">
           <h2>Connect with Me</h2>
         </div>
+        <!--my media buttons -->
         <div class="row media">
           <!--media-left from bs not working,
           added floatLeft class-->
-            <div class="media floatLeft">
-              <a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-            </div>
-            <div class="media floatLeft">
-              <a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-            </div>
-            <div class="media floatLeft">
-              <a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
-            </div>
+          <div class="media-left">
+            <a href="#"><img src="assets/images/github-128.png" class="social media-object" alt="GitHub" /></a>
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading">GitHub</h4>
+            <p>this is test text to see where this is going.</p>
+          </div>
+          <div class="media-left floatLeft">
+            <a href="#"><img src="assets/images/linkedin-128.png" class="social media-object" alt="LinkedIn" /></a>
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading">LinkedIn</h4>
+            <p>this is test text to see where this is going.</p>
+          </div>
+          <div class="media-left floatLeft">
+            <a href="#"><img src="assets/images/stackoverflow-128.png" class="social media-object" alt="Stack Overflow" /></a>
+          </div>
+          <div class="media-body">
+            <h4 class="media-heading">Stack Overflow</h4>
+            <p>this is test text to see where this is going.</p>
+          </div>
         </div>
       </section>
     </div>
-
-    <!--portfolio
-    <div class="row">
-      <section class="col-lg-3 portfolioFormat main-section">
-
-
-        <div class="work">
-          <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
-
-          <h3>Hangman</h3>
-        </div>
-        <div class="work">
-          <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-
-          <h3>RPG Game</h3>
-        </div>
-        <div class="work">
-          <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
-          <h3>Trivia Game</h3>
-        </div>
-        <div class="work">
-          <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-
-          <h3>Rutgers Info Widget</h3>
-        </div>
-        <div class="work">
-          <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
-
-          <h3>Rock Paper Scissors</h3>
-        </div>
-
-      </section>
-      <section class="col-lg-9">
-      </section>
-    </div>-->
-
-
-
-    <!--contact-->
-    <!--<div id="contactFormat">
-      <section class="contactFormat main-section">
-        <h1>Contact</h1>
-
-        <form id="contact-form">
-          <ul>
-            <li>
-              <label for="name">Name</label>
-              <input type="text" id="name" name="name" placeholder="John Smith" required="required">
-            </li>
-            <li>
-              <label for="email">Email</label>
-              <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
-            </li>
-            <li>
-              <label for="message">Message</label>
-              <textarea id="message" name="message" required="required"></textarea>
-            </li>
-          </ul>
-          <input type="submit">
-        </form>
-
-      </section>
-    </div>-->
   </main>
 
   <!--footer-->
@@ -215,7 +164,7 @@
       &nbsp;
     </div>
     <div class="container col-lg-4">
-      Copyright &copy; 2016 Your Name
+      <p class="copyright">Copyright &copy; 2016 Your Name</p>
     </div>
     <div class="col-lg-4">
       &nbsp;
