making stuff look pretty

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <section class="col-lg-2">
         <nav>
           <ul class="btn-group-vertical" role="group">
-            <li><button type="button" onclick="index()" class="btn btn-primary btn-block mainBtnFormat">About</button></li>
+            <li><button id="mainBtnFormat" class="btn btn-primary btn-block mainBtnFormat" type="button" onclick="index()" >About</button></li>
             <li><button type="button" onclick="portfolio()" class="btn btn-primary btn-block mainBtnFormat">Portfolio</button></li>
             <li><button type="button" onclick="contact()" class="btn btn-primary btn-block mainBtnFormat">Contact</button></li>
           </ul>
@@ -124,7 +124,7 @@
         </div>
 
       </section>
-      <section class="sidebar col-lg-3" id="mainLeft">
+      <section class="sidebar col-lg-3">
         <div class="row">
           <h2>Connect with Me</h2>
         </div>
@@ -137,21 +137,21 @@
           </div>
           <div class="media-body">
             <h4 class="media-heading">GitHub</h4>
-            <p>this is test text to see where this is going.</p>
+            <p>Find me at dwc3k5</p>
           </div>
           <div class="media-left floatLeft">
             <a href="#"><img src="assets/images/linkedin-128.png" class="social media-object" alt="LinkedIn" /></a>
           </div>
           <div class="media-body">
             <h4 class="media-heading">LinkedIn</h4>
-            <p>this is test text to see where this is going.</p>
+            <p>Such Professional Much Wow. please sir can I have some more text</p>
           </div>
           <div class="media-left floatLeft">
             <a href="#"><img src="assets/images/stackoverflow-128.png" class="social media-object" alt="Stack Overflow" /></a>
           </div>
           <div class="media-body">
             <h4 class="media-heading">Stack Overflow</h4>
-            <p>this is test text to see where this is going.</p>
+            <p>Where I go to attain a sense of humility</p>
           </div>
         </div>
       </section>
