man are these comments really needed? FORMATTING

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="row clearfix">
           <div id="mainImage">
-            <img src="assets/images/portrait.jpg" id="test" class="auth-image img-circle autoFill" alt="Your Name">
+            <img src="assets/images/portrait.jpg" id="test" class="auth-image img-thumbnail autoFill" alt="Your Name">
           </div>
           <p id="test2">
             Marshmallow jelly souffl&eacute; pastry biscuit gummi bears tootsie roll tootsie roll gingerbread. Cotton candy muffin gingerbread fruitcake. Sweet roll souffl&eacute; topping wafer croissant oat cake gummi&nbsp;bears.
